# c-generic-containers

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: containers.h  linked_list.h  list.h
include/libcontainers/: array.h  containers.h  debug.h  list.h
src/: debug.c  linked_list.c  list.c  map.c  string.c
tests/: test.c
